test/regtest/cases/errors/unresolved_symbol2.kum
| disable_exec
алг нач
 впред
кон